# WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.
#
# See the GNU Lesser General Public License in COPYING.LGPL for more details.
#

StarPU 1.4.0 (svn revision xxxx)
==============================================
New features:

StarPU 1.3.1 (git revision xxx)
==============================================

StarPU 1.3.0 (git revision 24ca83c6dbb102e1cfc41db3bb21c49662067062)
==============================================

New features:
  * New scheduler 'heteroprio' with heterogeneous priorities
  * Support priorities for data transfers.
  * Add support for multiple linear regression performance models
    - Bump performance model file format version to 45.
  * Add MPI Master-Slave support to use the cores of remote nodes. Use the
    --enable-mpi-master-slave option to activate it.
  * Add STARPU_CUDA_THREAD_PER_DEV environment variable to support driving all
    GPUs from only one thread when almost all kernels are asynchronous.
  * Add starpu_replay tool to replay tasks.rec files with Simgrid.
  * Add experimental support of NUMA nodes. Use STARPU_USE_NUMA to activate it.
  * Add a new set of functions to make Out-of-Core based on HDF5 Library.
  * Add a new implementation of StarPU-MPI on top of NewMadeleine
  * Add optional callbacks to notify an external resource manager
    about workers going to sleep and waking up
  * Add implicit support for asynchronous partition planning. This means one
    does not need to call starpu_data_partition_submit() etc. explicitly any
    more, StarPU will make the appropriate calls as needed.
  * Add starpu_task_notify_ready_soon_register() to be notified when it is
    determined when a task will be ready an estimated amount of time from now.
  * New StarPU-MPI initialization function (starpu_mpi_init_conf())
    which allows StarPU-MPI to manage reserving a core for the MPI thread, or
    merging it with CPU driver 0.